add code to html for quiz

--- a/index.html
+++ b/index.html
@@ -1,1 +1,103 @@
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <title>Programming Language Quiz!</title>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.6.0.js"></script>
+  <script src="js/scripts.js"></script>
+</head>
+<body>
 
+  <div class="container">
+    <h1>Which programming language is best for you?</h1>
+    <h2>Take this quiz to find out</h2>
+
+    <div class="card"> 
+      <h3>Which do you prefer?</h3>
+          <form id="beverageForm">
+            <div class="radio">
+              <label>
+                <input type="radio" name="beverage" value="Coffee" checked> 
+                Coffee
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="beverage" value="Water"> 
+                Water
+              </label>
+            </div>
+        </div> 
+
+        <div class="card"> 
+          <form id="pizzaForm">
+            <div class="radio">
+              <h3>Pineapple on pizza?</h3>
+              <label>
+                <input type="radio" name="pizza" value="pineapple" checked> 
+                Heck yeah!
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="pizza" value="noPineapple"> 
+                NO
+              </label>
+            </div>
+        </div> 
+
+        <div class="card"> 
+          <form id="awakeForm">
+            <div class="radio">
+              <h3>Which are you?</h3>
+              <label>
+                <input type="radio" name="awake" value="nightOwl" checked> 
+              Night Owl
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="awake" value="earlyBird"> 
+                Early Bird
+              </label>
+            </div>
+        </div> <!-- End Card 1 -->
+
+        <div class="card"> 
+          <form id="petForm">
+            <div class="radio">
+              <h3>Choose one</h3>
+              <label>
+                <input type="radio" name="pet" value="cat" checked> 
+                Cat
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="pet" value="dog"> 
+                Dog
+              </label>
+            </div>
+        </div> 
+
+        <div class="card"> 
+          <form id="plantsForm">
+            <div class="radio">
+              <h3>How are your houseplants?</h3>
+              <label>
+                <input type="radio" name="plants" value="good" checked> 
+                Happy!
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="plants" value="bad"> 
+                Currently being tortured, or nonexistent
+              </label>
+            </div>
+        </div> 
+
+  </div>
+</body>
+</html>
