--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div> 
 
-        <div class="card"> 
+        <div class="card1"> 
           <form id="pizzaForm">
             <div class="radio">
               <h3>Pineapple on pizza?</h3>
@@ -62,9 +62,9 @@
                 Early Bird
               </label>
             </div>
-        </div> <!-- End Card 1 -->
+        </div> 
 
-        <div class="card"> 
+        <div class="card1"> 
           <form id="petForm">
             <div class="radio">
               <h3>Choose one</h3>
