add button and branching

--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
         </div>
       </div> 
 
+      <div class="buttonDiv">
+        <button type="submit" class="btn btn-primary">Ready!</button>
+      </div>
+
+      <p class="output"></p>
+
     </form> 
    </div> 
 
