add jumbotron and jumbotron background picture

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
 
   <div class="container">
-    <h1>Which programming language is best for you?</h1>
-    <h2>Take this quiz to find out</h2>
+    <div class="jumbotron">
+      <h1>Which programming language is best for you?</h1>
+      <h2>Take this quiz to find out</h2>
+    </div>
     
     <form id="quizForm">
       <div class="card"> 
