fix branch to account for all three languages

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <div class="radio">
         <h3>Which do you prefer?</h3>
           <label>
-            <input type="radio" name="beverage" value="Coffee" checked> 
+            <input type="radio" name="beverage" value="coffee" checked> 
             Coffee
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="beverage" value="Water"> 
+            <input type="radio" name="beverage" value="water"> 
             Water
            </label>
         </div>
