WIP jQuery effects

--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
       </div>
 
       <p class="output"></p>
+      <div class="showingImg"></div>
+      <img src="img/happy.png" alt="pictue of cartoon happy house plant">
 
     </form> 
    </div> 
